--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <main class="maintag">
         <nav class="navbar text-white navbar-expand-lg navbar-light ">
             <a class="navbar-brand text-white" href="#">WORKOUT</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" id="bg" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -69,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="m-topp">
             <h1 class="exercises">Popular Exercises</h1>
             <span class="more_xercises">SEE MORE EXERCISES</span>
         </div>
@@ -147,7 +148,7 @@
                     <p class="patch_para">Lorem ipsum dolor sit amet, consectetue </br>adipiscing elit, do eiusmod
                         tempor</br> incididunt ut labore et dolore magna </br>aliqua consectetur adipiscing.</p>
                 </div>
-                <span class="start_btn">Get Started</span>
+                <span class="start_btn start_btn_res">Get Started</span>
             </div>
         </div>
         <div class="row no-gutters">
@@ -180,66 +181,66 @@
             </div>
         </div>
         <div class="row no-gutters">
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <span>01</span>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <h2>Workout at Home</h2>
                 <h5 class="videos">15 Videos</h5>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
             <div class="main_border">
                 <div class="border_botton"></div>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <span>02</span>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <h2>Stay Strong and Fit</h2>
                 <h5 class="videos">48 Videos</h5>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
             <div class="main_border">
                 <div class="border_botton"></div>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <span>03</span>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <h2>High Intensity</h2>
                 <h5 class="videos">25 Videos</h5>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
             <div class="main_border">
                 <div class="border_botton"></div>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <span>04</span>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <h2>Simple Workout</h2>
                 <h5 class="videos">35 Videos</h5>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
             <div class="main_border">
                 <div class="border_botton"></div>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <span>05</span>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <h2>Burn Calories</h2>
                 <h5 class="videos">35 Videos</h5>
             </div>
-            <div class="col-4" id="last">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="last">
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
             <div class="main_border">
@@ -249,14 +250,14 @@
         <footer>
             <h1 id="end"> WORKOUT</h1>
             <div class="row no-gutters">
-                <div class="col-3" id="end">
+                <div class="col-12 col-md-6 col-lg-3 mb-3" id="end">
                     <div class="para_div">
                         <p class="footer_txt">Lorem ipsum dolor sit amet,<br /> consectetur adipisicing elit,<br />sed
                             do eiusmod tempor incididunt ut <br />labore et dolore magna aliqua<br /> consectetur
                             adipiscing. Do<br />eiusmod tempor incididunt ut</p>
                     </div>
                 </div>
-                <div class="col-3" id="end">
+                <div class="col-12 col-md-6 col-lg-3 mb-3" id="end">
                     <div>
                         <h2 class="foot_content">BUSINESS</h2>
                     </div>
@@ -267,7 +268,7 @@
                         <h2 class="foot_content">CAREER</h2>
                     </div>
                 </div>
-                <div class="col-3" id="end">
+                <div class="col-12 col-md-6 col-lg-3 mb-3" id="end">
                     <div>
                         <h2 class="foot_content">BLOGS</h2>
                     </div>
@@ -278,7 +279,7 @@
                         <h2 class="foot_content">SECURITY</h2>
                     </div>
                 </div>
-                <div class="col-3" id="end">
+                <div class="col-12 col-md-6 col-lg-3 mb-3" id="end">
                     <div>
                         <h2 class="foot_content">CONTACT US</h2>
                     </div>
